# rampage

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md
.git_hooks/: pre-push
.github/workflows/: main.yml
src/: lib.rs
src/camera/: mod.rs
src/color/: mod.rs
src/geometry/: mod.rs  ray.rs  scene.rs  shape.rs  sphere.rs  vector.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
src/materials/: dielectric.rs  lambertian.rs  metal.rs
src/output/: mod.rs
src/util/: random.rs
