[package]
name = "rampage"
version = "0.1.0"
authors = ["Matthew Westrik <m@ttwestrik.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#image = "0.22.0"
#rand = { version="0.7.0", features= ["wasm-bindgen"] }
#wavefront_obj = "6.0.0"
