[package]
name = "rampage"
version = "0.1.0"
authors = ["Matthew Westrik <m@ttwestrik.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.0"
rand = "0.7.0"
indicatif = "0.11.0"
console = "0.7.7"
#wavefront_obj = "6.0.0"
